--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,8 @@
 markdown: redcarpet
 pygments: true
 
+url: http://www.quxiaofeng.me
+baseurl: /securitybiometrics
+
 title_tag_text: Security Biometrics
 h1_tag_text: Security Biometrics
